R10 产物版式修复：PPT 组合页表格溢出遮挡与 Excel 表头黑底
- PptxWriter：XSLFTable 默认每列 100pt 且不受 anchor 宽约束，组合页 5 列实际渲染 500pt 溢出压住右侧图表——列宽显式按份额分配（首列 2 份，收敛 410pt）+ 图片右移 500→520
- ExcelWriter：表头 setFillForegroundColor((short)0xE8EEF4) 把 RGB 误传调色板索引、截断成非法 indexed=-4364 被 Excel 渲染成黑底（全部 sheet 表头中招）——改 XSSFColor rgb=E8EEF4
- 新增 PptxLayoutTest / ExcelStyleTest 产物级断言（解 pptx/xlsx zip 验列宽、锚点、填充色），Snapshot 构造抽共享 TestSnapshots；测试 48→50

Co-Authored-By: Claude Code <noreply@anthropic.com>